spacing issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,10 +14,12 @@ code {
 .navbar {
   position: absolute;
   top: 4%;
-  left: 8%;
-  width: 70%;
+  left: 35%;
+  width: 60%;
+  height: 8%;
   /* display: block; */
-  /* border-style: double; */
+  // border-style: double;
+  display: flex;
   z-index: 12;
 }
 
@@ -27,6 +29,7 @@ code {
   /* margin-left: auto; */
   width: 95%;
   text-align: right;
+  justify-content: center;
 }
 
 .navbar li {
@@ -37,6 +40,7 @@ code {
 .logout {
   position: absolute;
   float: right;
+  right: -3%;
 }
 
 .logo-container {
@@ -45,7 +49,7 @@ code {
   top: -10%;
   left: 0%;
   z-index: 2;
-  width: 20%;
+  width: 300px;
   /* border-style: double; */
 }
 
@@ -271,6 +275,8 @@ code {
   background-color: white;
   z-index: 3;
   text-align: center;
+  align-content: center;
+  display: block;
 }
 
 .underlay {
@@ -369,11 +375,16 @@ code {
   display: block;
 }
 
+.userclub-container {
+  display: flex;
+}
+
 .user-club-div {
   /* text-align: center; */
   /* margin: 1%; */
   max-width: 100%;
-  padding: 1%;
+  margin: 1%;
+  margin-right: 5%;
   /* border-style: dotted; */
 }
 
@@ -381,6 +392,9 @@ code {
   width: 100px; 
 }
 
+.userclub-img {
+  height: 100px;
+}
 
 .user-club-div > img {
   height: 100px;
@@ -399,11 +413,9 @@ code {
 
 .wishlist-container {
   width: 100%;
-  list-style-type: none;
   display: flex;
   overflow: hidden;
   align-items: center;
-
   background-color: rgba(255,255,255, 0.3);
   padding: 1%;
   padding-top: 3%;
@@ -415,6 +427,15 @@ code {
   -webkit-animation-play-state: paused;
 } */
 
+.wishlist-ul {
+  list-style-type: none;
+  display: flex;
+  overflow: hidden;
+  // align-items: center;
+  width: 100%;
+  padding: 1%;
+  // background-color: rgba(255,255,255, 0.3);
+}
 
 
 .wishlist-item {
@@ -424,6 +445,12 @@ code {
 
   /* display: inline; */
   
+}
+
+.add-items {
+  // height: 80%;
+  margin: auto 2%;
+  padding-top: 3%;
 }
 
 .scroll-box {
@@ -455,6 +482,7 @@ code {
 
 .add-to-wishlist {
   width: 150px;
+  align-self: center;
 }
 
 .profile-content {
@@ -469,7 +497,7 @@ code {
   
   display: block;
   position: relative;
-  padding: 1em 2em;
+  padding: 0.5em 1.5em;
   appearance: none;
   border: 0;
   background: transparent;
